<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.knx.homemobile.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_apps"
        android:name="com.knx.homemobile.ui.apps.AppsFragment"
        android:label="@string/menu_apps"
        tools:layout="@layout/fragment_apps" />

    <fragment
        android:id="@+id/nav_devices"
        android:name="com.knx.homemobile.ui.devices.DevicesFragment"
        android:label="@string/menu_devices"
        tools:layout="@layout/fragment_devices" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.knx.homemobile.ui.settings.SettingsFragment"
        android:label="@string/menu_devices"
        tools:layout="@layout/fragment_settings" />
</navigation>