<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.settings.SettingsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="125dp"
            android:divider="?android:attr/dividerHorizontal"
            android:showDividers="middle"
            android:text="@string/menu_settings"
            android:textAlignment="center"
            android:textSize="48sp" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="15dp">

            <TableRow android:paddingBottom="20dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/user_name"
                    android:textSize="24sp" />
                <TextView
                    android:id="@+id/userNameField"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:text="@string/placeholder"
                    android:textSize="30sp" />
            </TableRow>

            <TableRow android:paddingBottom="20dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/display_name"
                    android:textSize="24sp" />
                <EditText
                    android:id="@+id/displayNameField"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:text="@string/placeholder"
                    android:textSize="30sp" />
            </TableRow>

            <TableRow android:paddingBottom="20dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/address"
                    android:textSize="24sp" />
                <TextView
                    android:id="@+id/addressField"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:text="@string/placeholder"
                    android:textSize="30sp" />
            </TableRow>

            <TableRow android:paddingBottom="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/max_role"
                    android:textSize="24sp" />
                <TextView
                    android:id="@+id/maxRoleField"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:text="@string/placeholder"
                    android:textSize="30sp" />
            </TableRow>

            <TableRow android:paddingBottom="20dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/role"
                    android:textSize="24sp" />
                <Spinner
                    android:id="@+id/rolesListField"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:spinnerMode="dropdown"
                    android:text="@string/placeholder"
                    android:textSize="30sp" />
            </TableRow>

            <TableRow android:paddingBottom="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/keep_signed_in"
                    android:textSize="20sp"
                    />

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/keepSignedIn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minWidth="20dp"
                    android:textAlignment="center"
                    android:visibility="visible" />

            </TableRow>
        </TableLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="157dp">

            <Button
                android:id="@+id/submit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/accept"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>


    </LinearLayout>
</androidx.core.widget.NestedScrollView>