<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".ui.devices.DevicesFragment">

    <TextView
        android:id="@+id/deviceTextId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/place_device_id"
        android:textAlignment="center"
        android:textSize="34sp"
        tools:text="@string/place_device_id" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="592dp"
        android:layout_weight="1"
        android:contentDescription="@string/description_device_list">

        <LinearLayout
            android:id="@+id/device_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />
    </ScrollView>

    <Button
        android:id="@+id/device_add_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/devices_add"
        tools:ignore="VisualLintButtonSize" />

</LinearLayout>
